<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/r6_warm_gray"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/weapon_img_description"
        android:scaleType="centerCrop"
        ads:srcCompat="@drawable/bg"
        tools:layout_editor_absoluteX="-40dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/gunImg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/header_desc"
        android:scaleType="fitCenter"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:srcCompat="@drawable/choose" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/spinner_text"
        android:entries="@array/weapons"
        android:popupBackground="@color/r6_dark"
        android:spinnerMode="dropdown"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/gunImg" />

    <View
        android:id="@+id/divider"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/listDivider"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textView7"
        ads:layout_constraintEnd_toEndOf="@+id/textView7"
        ads:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/typetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/type_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView5"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_of_fire"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textView9"
        ads:layout_constraintEnd_toEndOf="@+id/textView9"
        ads:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/rofText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/rof_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView7"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damage"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textView"
        ads:layout_constraintEnd_toEndOf="@+id/textView"
        ads:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/newdmgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dmg_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView9"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shots_to_kill"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textView2"
        ads:layout_constraintEnd_toEndOf="@+id/textView2"
        ads:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health1"
        android:textSize="14sp"
        ads:layout_constraintBottom_toTopOf="@+id/textView3"
        ads:layout_constraintEnd_toEndOf="@+id/textView3"
        ads:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/stk1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/stk1_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView2"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView2"
        ads:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health2"
        android:textSize="14sp"
        ads:layout_constraintBottom_toTopOf="@+id/textView4"
        ads:layout_constraintEnd_toEndOf="@+id/textView4"
        ads:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/stk2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/stk2_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView3"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/health3"
        android:textSize="14sp"
        ads:layout_constraintBottom_toTopOf="@+id/textView14"
        ads:layout_constraintEnd_toStartOf="@+id/divider"
        ads:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/stk3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/stk3_value"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/textView4"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/operators"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toBottomOf="@+id/divider"
        ads:layout_constraintEnd_toStartOf="@+id/divider"
        ads:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/operatorsTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ops_values"
        android:textSize="14sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toEndOf="@+id/divider"
        ads:layout_constraintTop_toTopOf="@+id/textView14" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3553351498831631/6096344331"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>